--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Simple Calculator</title>
         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
         <div id="calculator">
-            <div id="zero">0</div>
+            <div id="display">0</div>
             <button id="equal">=</button>
             <button id="clear">C</button>
             <div class="button-container">
