add css, keyboard support, decimal, and backspace

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <div id="display">0</div>
             <button id="equal">=</button>
             <button id="clear">C</button>
+            <button id="backspace">←</button>
             <div class="button-container">
                 <button class="add">+</button>
                 <button class="subtract">-</button>
@@ -18,6 +19,7 @@
                 <button class="divide">/</button>
             </div>
             <div class="digit-container">
+                <button class="digit">.</button>
                 <button class="digit">0</button>
                 <button class="digit">1</button>
                 <button class="digit">2</button>
