--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <body>
         <div id="calculator">
             <div id="display">0</div>
-            <button id="equal">=</button>
-            <button id="clear">C</button>
-            <button id="backspace">←</button>
+            <div class="function-container">
+                <button id="equal">=</button>
+                <button id="clear">C</button>
+                <button id="backspace">←</button>
+            </div>
             <div class="button-container">
                 <button class="add">+</button>
                 <button class="subtract">-</button>
